<resources>
    <string name="app_name">RxJavaTest</string>
    <string name="add_data">Add data</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="observable">Observable</string>
    <string name="subject">Subject</string>
    <string name="live_data">Live Data</string>
    <string name="observable_live_data">Observable + LiveData</string>
    <string name="live_data_reactive_streams">LiveDataReactiveStreams</string>
</resources>
